tests/ui/attributes/crate-type-empty.stderr
error: malformed `crate_type` attribute input
  --> $DIR/crate-type-empty.rs:2:1
   |
LL | #![crate_type]
   | ^^^^^^^^^^^^^^ help: must be of the form: `#![crate_type = "bin|lib|..."]`

error: aborting due to 1 previous error

